Added census msa downloading files

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ census_original_files/
 datasets/cleaned_census_api_files/msa_data/
 datasets/for_publishing/
 images/
+datasets/building_permits/cleaned/
