--- a/requirements.txt
+++ b/requirements.txt
@@ -67,9 +67,10 @@ referencing==0.35.1
 requests==2.31.0
 rich==13.7.1
 rpds-py==0.18.1
-scikit-learn==1.0.2
+scikit-learn==1.5.1
 scipy==1.13.0
 seaborn==0.13.2
+setuptools==70.3.0
 six==1.16.0
 smmap==5.0.1
 stack-data==0.6.3
